--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8">
     <title>Abhay Kumar</title>
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700"  rel="stylesheet" type="text/css">
-
 <style>
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: sans-serif;
     font-size: 200%;
 }
 </style>
