--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@ body {
 <span style="font-style: italic;">All the Projects are listed here.</span><br>
 <br>
 <br>
-<nav style="text-align: left;"><ul><li>Project-1 &nbsp;<b>About MIET</b><br>To know more About MIET <a href="https://ak-stuweb.github.io/sample/sample/web-development"> Click Here</a></li></ul></nav>
+<nav style="text-align: left;">
+    <ul>
+        <li>Project-1 &nbsp;<b>About MIET</b><br>To know more about MIET <a href="https://ak-stuweb.github.io/sample/sample/web-development"> Click Here</a></li>
+        <li>Project-2 &nbsp;<b>CV Website</b><br>To know more about it <a href="https://ak-stuweb.github.io/CV/Sample%201/index.html"> Click Here</a></li>
+    </ul>
+</nav>
 
 
 <br><br><hr>
